--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "memo",
-  "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.9.5"
-  }
+    "vite": "4.3.9"
+  },
+  "private": true
 }
